Replacing markup controller with ui-angular-route

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,4 +1,1 @@
-#dashboard-index{ ng_controller: 'TicketsController as tickets_ctrl' }
-  %h1.ui.header My Tickets
-
-  = render 'tickets/list'
+#dashboard-index{ ui_view: 'dashboard' }
