Open ticket view with client side validation
Added ng_messages to handle errors display

--- a/app/assets/stylesheets/_tickets.sass
+++ b/app/assets/stylesheets/_tickets.sass
@@ -1,3 +1,10 @@
+.tickets-index-header
+  .header
+    float: left
+
+  #open-ticket-button
+    float: right
+
 .tickets-list
   .item
     border-bottom: thin $lightest-gray solid
