--- a/app/views/tickets/index.html.haml
+++ b/app/views/tickets/index.html.haml
@@ -1,2 +1,8 @@
-%h1.ui.header My Tickets
+.tickets-index-header
+  %h1.ui.header My Tickets
+  = link_to 'Open new ticket', '#/tickets/new', class: 'ui primary button', id: 'open-ticket-button'
+  .clear
+
+.ui.divider
+
 = render 'tickets/list'
