--- a/app/views/tickets/open.html.haml
+++ b/app/views/tickets/open.html.haml
@@ -1,4 +1,4 @@
-%form#open-ticket-form.ui.form{ novalidate: true, name: 'openTicketForm' }
+%form#open-ticket-form.ui.form{ novalidate: true, name: 'openTicketForm', ng_hide: 'ticket_form_ctrl.hasBeenCreated' }
   %h1.ui.header Opening a new support ticket
 
   = hidden_field_tag :id, '', { ng_model: 'ticket_form_ctrl.ticket.id', 'ng-show': 'ticket_form_ctrl.ticket.isPersisted()' }
@@ -38,5 +38,11 @@
         ({{ openTicketForm['ticket[description]'].$viewValue.length }})
 
   .field
-    .ui.primary.button{ 'ng-click': 'ticket_form_ctrl.save()' } Confirm
+    .ui.primary.button#open-ticket-button{ 'ng-click': 'ticket_form_ctrl.save()' } Confirm
     = link_to 'Cancel', '/'
+
+#new-ticket-feedback{ ng_show: 'ticket_form_ctrl.hasBeenCreated' }
+  .ui.large.blue.message
+    Thank you for you feedback. A team of highly trained monkeys has been dispatched to deal with this situation.
+
+  = link_to 'Back to tickets list', '/'
