--- a/app/views/tickets/index.html.haml
+++ b/app/views/tickets/index.html.haml
@@ -5,4 +5,4 @@
 
 .ui.divider
 
-= render 'tickets/list'
+= render 'tickets/list', spa_show_ticket_path: '#/tickets/', empty_tickets_message: "You have no tickets"
