--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,2 +1,6 @@
 .ui.menu
+  - if current_user.admin?
+    = link_to 'Tickets', '#/admin/tickets', class: 'item'
+    = link_to 'Users', '#/admin/users', class: 'item'
+
   = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'right item'
