--- a/app/views/admin/tickets/index.html.haml
+++ b/app/views/admin/tickets/index.html.haml
@@ -2,6 +2,8 @@
   %h1.ui.header Tickets
   .clear
 
+= render '/admin/tickets/filter'
+
 .ui.divider
 
 = render 'tickets/list', spa_show_ticket_path: '#/admin/tickets/', empty_tickets_message: "There are no tickets"
