--- a/app/views/admin/tickets/index.html.haml
+++ b/app/views/admin/tickets/index.html.haml
@@ -4,6 +4,8 @@
 
 = render '/admin/tickets/filter'
 
+.ui.small.basic.button{ ng_click: 'tickets_ctrl.downloadAsPDF()' } Download selected tickets as PDF
+
 .ui.divider
 
 = render 'tickets/list', spa_show_ticket_path: '#/admin/tickets/', empty_tickets_message: "There are no tickets"
